--- a/TMC_GIT_USER001/.settings/org.talend.repository.prefs
+++ b/TMC_GIT_USER001/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:WkASDWz8JLaNN6cFpuWbtCrzU/gWcUivUNeTFD+Sdj0dHZXGsaUi6o0\=
